<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B673AB7">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/mon_profil"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.187"
      app:layout_constraintStart_toEndOf="@+id/imageView3"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="132dp"
      android:layout_height="130dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/profil_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.057"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_utilisateur" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="50dp"
      android:layout_height="123dp"
      android:layout_marginTop="28dp"
      android:contentDescription="@string/question_1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.087"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:srcCompat="@drawable/first"
      tools:ignore="ImageContrastCheck" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/vous_tes"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#795548"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.418"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView5" />

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="50dp"
      android:layout_height="112dp"
      android:layout_marginTop="36dp"
      android:contentDescription="@string/question_2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.088"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5"
      app:srcCompat="@drawable/deux"
      tools:ignore="ImageContrastCheck" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="300dp"
      android:text="@string/quel_ge_avez_vous"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#795548"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.674"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView6" />

  <Button
      android:id="@+id/Suivant_1"
      android:layout_width="86dp"
      android:layout_height="48dp"
      android:layout_marginBottom="48dp"
      android:background="#090808"
      android:backgroundTint="#020101"
      android:text="@string/suivant"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#EFEEEE"
      android:textStyle="bold"
      android:theme="@android:style/Theme.Black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.95"
      app:layout_constraintStart_toStartOf="parent" />

  <RadioGroup
      android:id="@+id/Group1"
      android:layout_width="237dp"
      android:layout_height="114dp"
      app:layout_constraintBottom_toTopOf="@+id/imageView6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.701"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.0">

    <RadioButton
        android:id="@+id/sexe_homme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/un_homme"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#795548"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/sexe_femme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/une_femme"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#795548"
        android:textSize="16sp"
        android:textStyle="bold" />
  </RadioGroup>

  <RadioGroup
      android:id="@+id/Groupe_age"
      android:layout_width="267dp"
      android:layout_height="149dp"
      app:layout_constraintBottom_toTopOf="@+id/Suivant_1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.847"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      app:layout_constraintVertical_bias="0.0">

    <RadioButton
        android:id="@+id/moins_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/moins_de_40ans"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#795548"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/entre_40_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/entre_40_et_60ans"
        android:textColor="#795548"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/Plus_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/plus_de_60_ans"
        android:textColor="#795548"
        android:textSize="16sp"
        android:textStyle="bold" />
  </RadioGroup>

  <Button
      android:id="@+id/bouton_precedent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="48dp"
      android:background="#0C0C0C"
      android:backgroundTint="#070707"
      android:text="@string/pr_c_dent"
      android:textColor="#F6F3F3"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.107"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>